--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -14,5 +14,6 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "云开发 QuickStart",
     "navigationBarTextStyle": "black"
-  }
+  },
+  "cloud": true
 }
